@@ -212,24 +212,21 @@ namespace Avogadro {
    * \subsection main Main Classes
    *
    * libavogadro interfaces:
+   * - Painter : General interface for graphical output: OpenGL, POVRay, etc.
    * - Engine : Interface for engine plugins
+   * - Extension : Interface for extension plugins
    * - Tool : Interface for tool plugins
    *
    * libavogadro classes:
    * - GLWidget : Widget for rendering 3d representations of a molecule.
-   * - MoleculeTreeView : Widget for rendering a tree view representation of a molecule.
+   * - Camera : Class for manipulating the 3d viewpoint.
+   * - Manipulate : Class for manipulating the underlying 3d data (i.e., a molecule).
    * - Primitive : Base class for all model components
    *   - Atom : Class for representing atoms
    *   - Bond : Class for representing bonds
    *   - Residue : Class for representing residues
    *   - Molecule : Class for representing molecules
    *
-   *
-   * avogadro interfaces:
-   * - Extension : Interface for extension plugins
-   *
-   * avogadro classes:
-   * - n/a
    *
    */
 
